movie section alignment fixed on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,6 @@ body {
 }
 
 .movie-section {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
